After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689733 - (gnome-settings-daemon:1704): GLib-GObject-WARNING **: g_object_set_valist: object class `PkTask' has no property named `only-download'
(gnome-settings-daemon:1704): GLib-GObject-WARNING **: g_object_set_valist: o...
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: updates
3.7.x
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2012-12-05 20:20 UTC by Dominique Leuenberger
Modified: 2012-12-06 07:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
PK_CHECK_VERSION usage corrected (1.26 KB, patch)
2012-12-05 20:20 UTC, Dominique Leuenberger
committed Details | Review

Description Dominique Leuenberger 2012-12-05 20:20:03 UTC
During startup of g-s-d, the error

(gnome-settings-daemon:1704): GLib-GObject-WARNING **: g_object_set_valist: object class `PkTask' has no property named `only-download'


is being printed into ~/.cache/gdm/session.log
Comment 1 Dominique Leuenberger 2012-12-05 20:20:59 UTC
Created attachment 230815 [details] [review]
PK_CHECK_VERSION usage corrected

PK_CHECK_VERSION expects major, minor, micro.

The only-download parameter was introduced with 0.8,1 (not 0.1.8)
Comment 2 Dominique Leuenberger 2012-12-05 20:21:46 UTC
For reference: I see this on a machine with g-s-d 3.6.3 and PK 0.7.4
Comment 3 Bastien Nocera 2012-12-06 07:36:56 UTC
Pushed to gnome-3-6 and master, thanks.