updates: Fix warning on startup with PackageKit < 0.8.1

Fix inverted parameters to PK_CHECK_VERSION.

https://bugzilla.gnome.org/show_bug.cgi?id=689733